--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@salutejs/client": "^1.16.2",
+    "@salutejs/plasma-icons": "^1.143.0",
+    "@salutejs/plasma-tokens": "^1.49.0",
+    "@salutejs/plasma-ui": "^1.190.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -13,6 +16,7 @@
     "@types/react-dom": "^18.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typescript": "=5.0.4",
