--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.2",
     "@salutejs/client": "^1.16.2",
     "@salutejs/plasma-icons": "^1.143.0",
     "@salutejs/plasma-tokens": "^1.49.0",
@@ -15,6 +16,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
