--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@salutejs/plasma-icons": "^1.143.0",
     "@salutejs/plasma-tokens": "^1.49.0",
     "@salutejs/plasma-ui": "^1.190.0",
+    "@salutejs/storage-adapter-memory": "^0.36.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -18,9 +19,11 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
